# VoxelCPP

./: .env.cmake  BuildMingw.bat  BuildUnix.sh  BuildWindows.bat  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/App/: app.cpp  app.hpp  window.cpp  window.hpp
src/Engine/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  file_utils.hpp  shader.cpp  shader.hpp  spectator_camera.cpp  spectator_camera.hpp  texture2d.cpp  texture2d.hpp  voxel.cpp  voxel.hpp
src/Engine/buffers/: buffer.cpp  buffer.hpp  buffers.hpp  ebo.cpp  ebo.hpp  vao.cpp  vao.hpp
src/shaders/: test.frag  test.vert  test_tex.frag  test_tex.vert  voxel.frag  voxel.vert
